# freshmold

./: CONTRIBUTING.org  LICENSE  README.org  flake.nix
ai-rules/: .gitignore  AI_PLEASE_TAKE_MY_JOB.org  README.org  cookiecutter.json
by-language/python/fast-api/: Justfile  README.org  cookiecutter.json  flake.nix  flake_old.nix  pyproject.toml
by-language/python/fast-api-pg/dummy_project_name/: .envrc.example  .gitignore  TECHNICAL_CONTEXT_FOR_AI_DELETE_AFTER_USE.md  flake.nix  pyproject.toml
by-language/python/fast-api-pg/dummy_project_name/src/dummy/: config.py  main.py
by-language/python/fast-api-pg/dummy_project_name/src/dummy/db/: README.org  connection.py
by-language/python/fast-api/dummy_project_name/: Justfile  pyproject.toml
by-language/python/fast-api/dummy_project_name/src/dummy/: config.py  main.py
by-language/python/fast-api/dummy_project_name/src/dummy/routers/: cash.py
by-language/python/fast-api/dummy_project_name/src/{{cookiecutter.python_package_name}}/: main.py
by-language/python/fast-api/dummy_project_name/tests/: conftest.py
by-language/python/fast-api/poop/src/dummy/: main.py
by-language/python/fast-api/src/dummy/: config.py  main.py
by-language/python/fast-api/src/dummy/routers/: cash.py
by-language/python/fast-api/src/dummy/telemetry/: log.py
by-language/python/fast-api/tests/: conftest.py
by-language/python/fast-api/{{ cookiecutter.project_slug }}/: flake.nix
by-language/python/fast-api/{{cookiecutter.project_slug}}/: Justfile  TECHNICAL_CONTEXT_FOR_AI_DELETE_AFTER_USE.md  pyproject.toml
by-language/python/fast-api/{{cookiecutter.project_slug}}/src/{{cookiecutter.python_package_name}}/: config.py  main.py
by-language/python/fast-api/{{cookiecutter.project_slug}}/src/{{cookiecutter.python_package_name}}/routers/: cash.py
by-language/python/fast-api/{{cookiecutter.project_slug}}/tests/: conftest.py  test_sample.py
by-tools/flakes/: go.nix  (+1 more)
(+28 files in other folders)
